tests/reference/run-derived_type_06-2623a81.stderr
semantic error: Only one array can be used in an expression with derived types.
  --> tests/errors/derived_type_06.f90:14:5
   |
14 |     main_arr%arr_2%num = 22
   |     ^^^^^^^^^^^^^^^^^^ 
